# iwtros_framework

./: .gitmodules  README.md  README_melodic.md  editing cut  links for my reference
iwtros_descriptions/omronld/omronld_description/: CMakeLists.txt  package.xml
iwtros_descriptions/omronld/omronld_description/launch/: new_description.launch  old_description.launch
iwtros_descriptions/omronld/omronld_description/urdf/: new_omronld.urdf.xacro  old_omronld.urdf.xacro  omronld.urdf.xacro  omronld_2.urdf.xacro  omronld_caster.urdf.xacro  omronld_wheel.urdf.xacro
iwtros_descriptions/omronld/omronld_description/urdf/laser/: old_sick_lms1xx.urdf.xacro  sick_lms1xx.urdf.xacro
iwtros_descriptions/omronld/omronld_mindistance_controller/: CMakeLists.txt  package.xml
iwtros_descriptions/omronld/omronld_mindistance_controller/include/omronld_mindistance_controller/: omronldmindistanceController.hpp
iwtros_descriptions/omronld/omronld_mindistance_controller/src/: omronld_mindistance_controller_node.cpp  omronldmindistanceController.cpp
iwtros_descriptions/robots_ee_pkg/: basic.rviz
iwtros_gazebo/: CMakeLists.txt  package.xml
iwtros_gazebo/config/: conveyor_objects.yaml  iiwa_control.yaml  iiwa_table_control.yaml  panda_control.yaml  ur5_control.yaml  wsg_50_dependent_joints.yaml  wsg_50_gl.yaml
iwtros_gazebo/include/iwtros_gazebo/: conveyor_spawner.h  multi_laserscaner.hpp  urdf_creator.h
iwtros_gazebo/include/iwtros_gazebo/plugins/: ROSTableControlPlugin.hh
iwtros_gazebo/launch/: conveyor_spawner.launch  env_gmapping.launch  iwtros_enivironment.launch  laserscan_multi_merger.launch  spawn_iiwa.launch  spawn_new_omronld.launch  spawn_omronld.launch  spawn_panda.launch  spawn_robots.launch  spawn_static_world_object.launch  spawn_ur5.launch
iwtros_gazebo/launch/controllers/: kuka_iiwa_control.launch  omronld_control.launch  panda_control.launch  ur5_control.launch  wsg50_gripper_control.launch
iwtros_gazebo/map/: test1.pgm  test1.yaml  test2.pgm  test2.yaml  test3.pgm  test3.yaml  test4.pgm  test4.yaml  test5.pgm  test5.yaml  test6.pgm  test6.yaml
iwtros_gazebo/models/iwt/: model.config  model.sdf
iwtros_gazebo/src/: conveyor_spawn_node.cpp  conveyor_spawner.cpp  laser_pointCloud.py  laserscan_multi_merger_node.cpp  laserscaner_multi_merge_node.cpp  multi_laserscaner.cpp  urdf_creator.cpp  urdf_creator_test.cpp
iwtros_gazebo/src/plugins/: ROSTableControlPlugin.cc  tableControlPlugin.cpp
iwtros_gazebo/worlds/: amcl.rviz  gmapping.rviz  iiwa_hw.rviz  iwtros.world  iwtros2.world  motionPlanning.rviz  new_spawner.rviz
iwtros_goal/: CMakeLists.txt  package.xml
iwtros_goal/cfg/: Reverse.cfg
iwtros_goal/include/iwtros_goal/: fts_controller.hpp  reversePID.h
iwtros_goal/launch/: fts_controller.launch  iiwa_LNT.launch  iiwa_panda_pp.launch  iiwa_pick_place_ptp_lin.launch  iiwa_sb.launch  iiwa_sb_init.launch  iiwa_task_handler.launch  panda_LNT.launch  panda_pick_place.launch  panda_pick_place_ptp_lin.launch  ur5_home.launch  ur5_pick_place.launch
iwtros_goal/scripts/: iiwa_pick_place.py  iiwa_ptp_lin_motion.py  iiwa_random_pose.py  iiwa_sb.py  panda_pick_place.py  panda_ptp_lin_motion.py  panda_random_pose.py  ur5_home.py  ur5_pick_place.py
iwtros_goal/src/: control_table_node.cpp  fts_controller.cpp  fts_controller_node.cpp  fts_goal_node.cpp  iiwa_pick_and_place.cpp  iiwa_sb.cpp  iiwa_task_handler.cpp  panda_pick_place.cpp  reversePID.cpp  task_handler_iiwa.cpp  ur5_async_task.cpp
iwtros_gui/: CMakeLists.txt  package.xml
iwtros_iiwa_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
iwtros_launch/: CMakeLists.txt  package.xml
iwtros_motion_programming/: CMakeLists.txt  package.xml
iwtros_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
iwtros_msgs/: CMakeLists.txt  package.xml
iwtros_panda_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
iwtros_ur5_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
iwtros_utilities/: CMakeLists.txt  package.xml  setup.py
omronld/omronld_gazebo/: package.xml
omronld/omronld_gazebo/building/test/: model.sdf
omronld/omronld_gazebo/config/: control.yaml
omronld/omronld_gazebo/launch/: amcl.launch  gmapping.launch
omronld/omronld_gazebo/param/: costmap_common_params.yaml  dwa_local_planner_params.yaml  local_costmap_params.yaml  move_base_params.yaml
omronld/omronld_rviz/: CMakeLists.txt  package.xml
pyQt_GUI/: firstDraft.py  firstDraft.ui  pyQtTutorial.py  test1.py  tutorial.ui
robots_ee_pkg/: CMakeLists.txt  package.xml
wsg50-ros-pkg/: README.md
wsg50-ros-pkg/wsg_50_driver/: CMakeLists.txt  package.xml  sensor_test.lua  spi_data_test.lua
wsg50-ros-pkg/wsg_50_driver/config/: hand0.yaml  hand0_f0optical_f1fmf.yaml
wsg50-ros-pkg/wsg_50_driver/config/bare/: finger0_cal.csv  finger1_cal.csv
wsg50-ros-pkg/wsg_50_driver/config/blocker/: finger0_cal.csv  finger1_cal.csv
wsg50-ros-pkg/wsg_50_driver/config/blocker/bak/: finger0_cal.csv
wsg50-ros-pkg/wsg_50_driver/config/flat/: finger0_cal.csv  finger1_cal.csv
wsg50-ros-pkg/wsg_50_driver/config/flat/bak/: finger0_cal.csv  finger1_cal.csv
wsg50-ros-pkg/wsg_50_driver/config/force/: finger0_cal.csv
wsg50-ros-pkg/wsg_50_driver/config/rounded/: finger0_cal.csv  finger0_cal_bak.csv  finger1_cal.csv  finger1_cal_bak.csv
wsg50-ros-pkg/wsg_50_driver/config/rounded/bak/: finger0_cal.csv
wsg50-ros-pkg/wsg_50_driver/config/rounded/bak_08_12/: finger0_cal.csv  finger1_cal.csv
wsg50-ros-pkg/wsg_50_driver/include/wsg_50/: functions.h  load_cell_finger.h  main_action_diver.h  optical_weiss_array.h  uart_comms.h
wsg50-ros-pkg/wsg_50_driver/launch/: collect_data.launch  collect_dist_force.launch  optical_weiss.launch  spi_test.launch  test_hand.launch  wsg_50_tcp.launch  wsg_50_tcp_script.launch  wsg_50_udp_script.launch
wsg50-ros-pkg/wsg_50_driver/src/: calibrate_finger.py  collect_data.cpp  collect_dist_force.cpp  force_test.py  functions.cpp  load_cell_finger.cpp  main.cpp  optical_weiss.cpp  spi_test.cpp  tcp.c  uart_comms.cpp
wsg50-ros-pkg/wsg_50_driver/src/new/: main_action_driver.cpp
(+299 files in other folders)
