<?xml version="1.0"?>
<package>
  <name>omronld_gazebo</name>
  <version>0.3.1</version>
  <description>omron ld simulator bringup</description>

  <author email="felix.goetz-tfs16@mb.dhbw-ravensurg.de">Felix Goetz</author>
  <maintainer email="felix.goetz-tfs16@mb.dhbw-ravensurg.de">Felix Goetz</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roslaunch</build_depend>

  <run_depend>controller_manager</run_depend>
  <run_depend>gazebo_plugins</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>gazebo_ros_control</run_depend>
  <run_depend>hector_gazebo_plugins</run_depend>
  <run_depend>omronld_description</run_depend>
  <run_depend>pointcloud_to_laserscan</run_depend>
  <run_depend>rostopic</run_depend>
  <run_depend>interactive_marker_twist_server</run_depend>
  <run_depend>joint_state_controller</run_depend>
  <run_depend>robot_localization</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>twist_mux</run_depend>

</package>




