<?xml version="1.0"?>
<package format="2">
    <name>omronld_rviz</name>
    <version>0.0.0</version>
    <description>The omronld_rviz package</description>

    <author email="felix.goetz-tfs16@mb.dhbw-ravensurg.de">Felix Goetz</author>
    <maintainer email="felix.goetz-tfs16@mb.dhbw-ravensurg.de">Felix Goetz</maintainer>

    <license>TODO</license>

    <buildtool_depend>catkin</buildtool_depend>

</package>
